# catan-ai

./: .gitignore  .pre-commit-config.yaml  README.md  all_generation_weights.npy  board.pickle  dqn_model.pt  final_weights.npy  play.py  pyproject.toml  self_play_1.pt  self_play_2.pt  train_dqn.py
catan_ai/agents/: GAagent.py  TDAgent.py  __init__.py  dqn_agent.py  dqn_train_agent.py  mcts.py  pyproject.toml  random_agent.py
